--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,11 @@ frozenlist==1.4.1
 idna==3.6
 iniconfig==2.0.0
 isort==5.13.2
+joblib==1.3.2
 mccabe==0.7.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+nltk==3.8.1
 packaging==23.2
 pathspec==0.12.1
 platformdirs==4.1.0
@@ -26,12 +28,15 @@ pluggy==1.3.0
 pylint==3.0.3
 pytest==7.4.3
 pytest-cov==4.1.0
+regex==2023.10.3
 requests==2.31.0
 six==1.16.0
 soupsieve==2.5
 termcolor==2.4.0
+textblob==0.17.1
 tomli==2.0.1
 tomlkit==0.12.3
+tqdm==4.66.1
 typing_extensions==4.9.0
 urllib3==2.1.0
 wikipedia==1.4.0
